<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:background="@color/color_1f202a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.TitleView android:id="@id/mTitleView" android:layout_width="fill_parent" android:layout_height="128.0px" app:titleViewTitle="@string/set_pwd" />
    <com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:id="@id/resetPwd" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:textSize="30.0px" android:textColor="@color/white" android:textColorHint="@color/color_99999" android:layout_gravity="center_horizontal" android:id="@id/pwdFirst" android:background="@drawable/bg_edit_radius_input" android:paddingLeft="20.0px" android:focusable="true" android:layout_width="702.0px" android:layout_height="90.0px" android:layout_marginTop="30.0px" android:hint="@string/pwd_hint" android:singleLine="true" android:maxLength="12" android:digits="@string/filter_vcode" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_f23232" android:layout_gravity="center_horizontal" android:id="@id/pwdFirstError" android:visibility="gone" android:layout_width="702.0px" android:layout_height="wrap_content" android:layout_marginTop="30.0px" android:text="@string/pwd_error" />
        <EditText android:textSize="30.0px" android:textColor="@color/white" android:textColorHint="@color/color_99999" android:layout_gravity="center_horizontal" android:id="@id/pwdSecond" android:background="@drawable/bg_edit_radius_input" android:paddingLeft="20.0px" android:focusable="true" android:layout_width="702.0px" android:layout_height="90.0px" android:layout_marginTop="30.0px" android:hint="@string/pwd_again" android:singleLine="true" android:maxLength="12" android:digits="@string/filter_vcode" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_f23232" android:layout_gravity="center_horizontal" android:id="@id/pwdSecondError" android:visibility="gone" android:layout_width="702.0px" android:layout_height="wrap_content" android:layout_marginTop="30.0px" android:text="@string/not_match_password" android:digits="@string/filter_vcode" />
        <TextView android:enabled="false" android:textSize="30.0px" android:textStyle="bold" android:textColor="@color/ffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/confirmBt" android:background="@drawable/shape_common_focused_button" android:layout_width="704.0px" android:layout_height="80.0px" android:layout_marginLeft="24.0px" android:layout_marginTop="136.0px" android:layout_marginRight="24.0px" android:layout_marginBottom="100.0px" android:text="@string/sure" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoRelativeLayout android:id="@id/resetPwdSuccess" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/img" android:layout_width="103.0px" android:layout_height="129.0px" android:layout_marginTop="144.0px" android:src="@mipmap/ic_phone_reset" android:layout_centerHorizontal="true" />
        <TextView android:textSize="26.0px" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="41.0px" android:layout_marginTop="65.0px" android:layout_marginRight="41.0px" android:text="@string/pwd_reset_ok" android:layout_below="@id/img" android:layout_centerHorizontal="true" />
    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>