<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:background="@drawable/shape_common_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="36.0px" android:textColor="@color/color_1a1a1a" android:gravity="center" android:id="@id/dialog_title" android:layout_width="fill_parent" android:layout_height="150.0px" android:text="@string/mine_setting_update_title" />
    <TextView android:scrollbarSize="3.0dip" android:scrollbarThumbVertical="@drawable/bg_scrollbar_thumb" android:scrollbarTrackVertical="@drawable/bg_scrollbar_track" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textSize="26.0px" android:textColor="@color/color_333333" android:gravity="center|left|top" android:id="@id/dialog_content" android:paddingLeft="40.0px" android:paddingRight="40.0px" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="180.0px" android:text="@string/version_forbidden_upgrade_install" android:lineSpacingExtra="30.0px" android:scrollbarFadeDuration="0" android:fadeScrollbars="false" android:overScrollMode="always" />
    <TextView android:textSize="20.0px" android:textColor="@color/color_common_error" android:paddingLeft="40.0px" android:paddingRight="40.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0px" android:text="@string/version_forbidden_upgrade_exception_hint" />
    <TextView android:textSize="20.0px" android:textColor="@color/color_common_error" android:id="@id/mTvContract" android:paddingLeft="40.0px" android:paddingRight="40.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/version_forbidden_upgrade_contract" />
    <com.mobile.brasiltv.view.KoocanButton android:textSize="12.0sp" android:textColor="@color/color_ffffff" android:id="@id/dialog_submit" android:background="@drawable/bg_upgrade_confirm" android:layout_width="fill_parent" android:layout_height="90.0px" android:layout_marginLeft="60.0px" android:layout_marginTop="30.0px" android:layout_marginRight="60.0px" android:layout_marginBottom="20.0px" android:text="@string/version_forbidden_upgrade_ok" />
    <com.mobile.brasiltv.view.KoocanButton android:textSize="12.0sp" android:textColor="@color/color_important" android:id="@id/dialog_cancel" android:background="@drawable/bg_home_upgrade_cancel" android:layout_width="fill_parent" android:layout_height="90.0px" android:layout_marginLeft="60.0px" android:layout_marginRight="60.0px" android:layout_marginBottom="40.0px" android:text="@string/version_forbidden_upgrade_exit" />
</com.zhy.autolayout.AutoLinearLayout>