<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout android:id="@id/mLoginRoot" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.login.ScrollableImageView android:id="@id/mSivBg" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <View android:id="@id/mVCompatBg" android:background="@drawable/bg_login_compat_longpic" android:layout_width="fill_parent" android:layout_height="fill_parent" android:foreground="@color/color_88000000" />
    <com.mobile.brasiltv.view.TitleBarView android:id="@id/mTbvTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleBgColor="@color/transparent" app:titleText="" app:titleTextColor="@color/color_ffffff" />
    <com.zhy.autolayout.AutoLinearLayout android:id="@id/mLayoutTab" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="44.0px" android:layout_marginTop="168.0px">
        <com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:id="@id/mLayoutTabQuickLogin" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="40.0px" android:textColor="@color/selector_color_white_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_recent_login" />
            <View android:layout_gravity="center_horizontal" android:background="@drawable/bg_tab_line_login" android:layout_width="40.0px" android:layout_height="6.0px" android:layout_marginTop="10.0px" />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:id="@id/mLayoutTabLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0px">
            <TextView android:textSize="40.0px" android:textColor="@color/selector_color_white_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_other_accounts" />
            <View android:layout_gravity="center_horizontal" android:background="@drawable/bg_tab_line_login" android:layout_width="40.0px" android:layout_height="6.0px" android:layout_marginTop="10.0px" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
    <TextView android:textSize="24.0px" android:textColor="@color/color_999999" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/mTvDeviceInfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0px" android:text="@string/current_device_id" />
    <com.zhy.autolayout.AutoLinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/mLayoutLoginButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="45.0px" android:layout_marginTop="290.0px" android:layout_marginRight="45.0px">
        <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbAccountLogin" android:layout_width="fill_parent" android:layout_height="110.0px" app:loginBg="@drawable/bg_btn_account_login" app:loginIcon="@drawable/ic_login_account" app:loginMethod="@string/login_method_account" app:loginMethodColor="@color/color_ffffff" />
        <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbGoogleLogin" android:layout_width="fill_parent" android:layout_height="110.0px" android:layout_marginTop="20.0px" app:loginBg="@drawable/bg_btn_google_login" app:loginIcon="@drawable/ic_login_google" app:loginMethod="@string/login_method_google" app:loginMethodColor="@color/color_1a1a1a" />
        <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbEmailLogin" android:layout_width="fill_parent" android:layout_height="110.0px" android:layout_marginTop="20.0px" app:loginBg="@drawable/bg_btn_email_login" app:loginIcon="@drawable/ic_bind_mail" app:loginMethod="@string/login_method_email" app:loginMethodColor="@color/color_ffffff" />
        <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbMobileLogin" android:layout_width="fill_parent" android:layout_height="110.0px" android:layout_marginTop="20.0px" app:loginBg="@drawable/bg_btn_mobile_login" app:loginIcon="@drawable/ic_login_mobile" app:loginMethod="@string/login_method_mobile" app:loginMethodColor="@color/color_1a1a1a" />
        <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbScanLogin" android:layout_width="fill_parent" android:layout_height="110.0px" android:layout_marginTop="20.0px" app:loginBg="@drawable/bg_btn_scan_code_login" app:loginIcon="@drawable/ic_login_scan_code" app:loginMethod="@string/login_method_scan_code" app:loginMethodColor="@color/color_ffffff" />
        <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbVisitorLogin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="110.0px" android:layout_marginTop="20.0px" app:loginBg="@drawable/bg_btn_visitor_login" app:loginIcon="@null" app:loginMethod="@string/login_method_visitor" app:loginMethodColor="@color/color_ffffff" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoRelativeLayout android:layout_gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="156.0px">
        <TextView android:textSize="24.0px" android:textColor="@color/color_ffffff" android:id="@id/mTvEncounterProblem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="40.0px" android:text="@string/login_encounter_problem" android:layout_toLeftOf="@id/mViewDivider" />
        <View android:id="@id/mViewDivider" android:background="@color/color_ffffff" android:layout_width="2.0px" android:layout_height="24.0px" android:layout_centerInParent="true" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_ffffff" android:id="@id/mTvForgetPwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0px" android:text="@string/login_forget_password" android:layout_toRightOf="@id/mViewDivider" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <TextView android:textSize="20.0px" android:textColor="@color/color_e6e6e6" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/tvWebsite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0px" />
    <com.zhy.autolayout.AutoLinearLayout android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/mAllPrivacyPolicy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="90.0px">
        <TextView android:textSize="12.0sp" android:textColor="@color/color_e6e6e6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_and_agree" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_common_link" android:id="@id/mTvPrivacyPolicy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_and_agree_end" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoFrameLayout>