<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:background="@drawable/shape_common_dialog_bg" android:layout_width="600.0px" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="right" android:id="@id/mIvClose" android:padding="23.0px" android:layout_width="76.0px" android:layout_height="76.0px" android:layout_marginRight="5.0px" android:src="@drawable/icon_dialog_finish" />
        <TextView android:textSize="36.0px" android:textStyle="bold" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0px" android:text="@string/exchange_failed_title" />
        <TextView android:textSize="28.0px" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/mTvRedeemCode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="29.0px" android:layout_marginTop="60.0px" android:text="@string/exchange_redeem_code" />
        <TextView android:textSize="28.0px" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/mTvRedeemCodeStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="29.0px" android:text="@string/exchange_redeem_code_status" />
        <TextView android:textSize="28.0px" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/mTvValidUntil" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="29.0px" android:text="@string/exchange_valid_until" />
        <TextView android:textSize="28.0px" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/mTvTimeOfUsed" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="29.0px" android:text="@string/exchange_time_of_use" />
        <TextView android:textSize="28.0px" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/mTvServiceDays" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="29.0px" android:layout_marginBottom="18.0px" android:text="@string/exchange_service_days" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_3897d1" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/mTvErrorHint" android:visibility="gone" android:layout_width="526.0px" android:layout_height="wrap_content" android:layout_marginTop="10.0px" android:text="This redeem code is invalid in this area, please contact your reseller or the place where you purchase the activation code!" />
        <TextView android:textSize="28.0px" android:textStyle="bold" android:textColor="@color/color_ffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/mButtonOK" android:background="@drawable/shape_common_focused_button" android:clickable="true" android:layout_width="480.0px" android:layout_height="90.0px" android:layout_marginTop="28.0px" android:layout_marginBottom="40.0px" android:text="@string/no_update_ok" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>