<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout android:background="@drawable/shape_common_dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="28.0px" android:textColor="@color/color_important" android:gravity="center" android:id="@id/mTextTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="37.0px" android:text="@string/attention" android:layout_centerHorizontal="true" />
    <TextView android:textSize="24.0px" android:textColor="@color/color_666666" android:gravity="center" android:id="@id/mTextNotify" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0px" android:layout_marginTop="43.0px" android:text="@string/are_you_adult" android:layout_below="@id/mTextTitle" />
    <TextView android:textSize="24.0px" android:textColor="@color/ffffff" android:gravity="center" android:id="@id/mTextNo" android:background="@drawable/shape_common_focused_button" android:layout_width="360.0px" android:layout_height="60.0px" android:layout_marginTop="70.0px" android:text="@string/no" android:layout_below="@id/mTextNotify" android:layout_centerHorizontal="true" />
    <TextView android:textSize="24.0px" android:textColor="@color/color_important" android:gravity="center" android:id="@id/mTextYes" android:background="@drawable/shape_common_unfocused_button" android:layout_width="360.0px" android:layout_height="60.0px" android:layout_marginTop="30.0px" android:text="@string/yes" android:layout_below="@id/mTextNo" android:layout_centerHorizontal="true" />
</com.zhy.autolayout.AutoRelativeLayout>